objects/Score__c.object
<CustomObject>
    <description>Score</description>
    <fields>
        <fullName>Clinical_Trial_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>HCT Number</inlineHelpText>
        <label>Clinical Trial Profile</label>
        <referenceTo>Clinical_Trial_Profile__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCP Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PI_Override_Status__c</fullName>
        <formula>TEXT(Study_Site__r.Override_PI_Referral_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PI Override Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scores (PI)</relationshipLabel>
        <relationshipName>Scores1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relative_Score__c</fullName>
        <description>Relative  Score- how good of a referrer is the HCP? How good of a site member is the PI?</description>
        <inlineHelpText>Relative  Score- how good of a referrer is the HCP? How good of a site member is the PI?</inlineHelpText>
        <label>Relative Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Score</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S- {0000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>